# OPP_lab4

./: .gitignore  CMakeLists.txt
include/: Array.h  Figure.h  Pentagon.h  Point.h  Rhombus.h  Trapezoid.h
src/: main.cpp
tests/: test_figures.cpp
